--- a/Proyecto/css/landing.css
+++ b/Proyecto/css/landing.css
@@ -290,3 +290,70 @@ footer {
   margin: 0;
   color: #333;
 }
+.contacto {
+  float: none; /* Evita que los elementos floten uno al lado del otro */
+  clear: both; /* Asegura que cada elemento esté en una nueva línea */
+}
+.Intermedio{
+  float: none; /* Evita que los elementos floten uno al lado del otro */
+  clear: both; /* Asegura que cada elemento esté en una nueva línea */
+}
+.formulario{
+    float: none; /* Evita que los elementos floten uno al lado del otro */
+    clear: both; /* Asegura que cada elemento esté en una nueva línea */
+}
+/* Estilos específicos para el formulario dentro del contenedor .form-container */
+.form-container {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.form-container h1 {
+  margin-top: 0;
+  font-size: 24px;
+}
+
+.form-container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-container label {
+  margin: 10px 0 5px;
+}
+
+.form-container input, .form-container textarea {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+.form-container button {
+  padding: 10px;
+  background-color: #28a745;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.form-container button:hover {
+  background-color: #218838;
+}
+
+.form-container #responseMessage {
+  margin-top: 10px;
+  font-size: 16px;
+}
+
+.main-container {
+  display: flex; /* Asegúrate de que los elementos hijos se alineen en fila */
+  justify-content: center;
+}
