--- a/Proyecto/css/landing.css
+++ b/Proyecto/css/landing.css
@@ -1,4 +1,5 @@
 body {
+  font-size: x-large;
   margin: 0;
   font-family: Arial, sans-serif;
   background-color: #D9D4C5;
@@ -357,9 +358,7 @@ footer {
   display: flex; /* Asegúrate de que los elementos hijos se alineen en fila */
   justify-content: center; /* Centra los elementos horizontalmente */
   align-items: flex-start; /* Alinea los elementos al inicio verticalmente */
-  gap: 20px; /* Espacio entre los dos contenedores */
+  gap: 10px; /* Espacio entre los dos contenedores */
   max-width: 1200px; /* Ancho máximo del contenedor principal */
   margin: 0 auto; /* Centra el contenedor principal */
 }
-
-  
