--- a/Proyecto/css/landing.css
+++ b/Proyecto/css/landing.css
@@ -1,11 +1,17 @@
-
 body {
   margin: 0;
   font-family: Arial, sans-serif;
   background-color: #D9D4C5;
 }
-
-
+p {
+  font-size: 20px;
+}
+button{
+  font-size: 20px;
+}
+main {
+  background-color: #D9D4C5;
+}
 .servicios-veterinarios {
   margin-left: 20px;
   text-align: center;
@@ -47,19 +53,50 @@ body {
   opacity: 0.8;
 }
 
-.quienes{
-  display: flex; /* Hacemos que los elementos hijos sean flex items */
-  justify-content: space-between; /* Distribuye los elementos de forma equitativa */
-  align-items: center; /* Alinea los elementos verticalmente al centro */
+.about-us {
+  background-color: #A0A68A;
+  padding: 60px 240px;
+  text-align: center;
+  max-width: 1200px; /* Ajusta según el tamaño deseado */
+  margin: 0 auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.image img {
-  max-width: 100%; /* Ajusta el ancho máximo de la imagen */
-  height: auto; /* Mantiene la proporción de la imagen */
+.logo {
+  width: 100%;
+  max-width: 300px; /* Ajusta según el tamaño deseado */
+  height: auto;
+  object-fit: contain;
+  margin: 0 auto 30px auto;
 }
 
-.quienes .content {
-  text-align: left; /* Alinea el texto a la izquierda */
+.text-content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.section {
+  background-color: #D9D4C5;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  font-size: 20px;
+}
+.section ul li {
+  font-size: 20px;
+}
+.section h2 {
+  font-size: 28px;
+  color: #0A2126;
+  margin-bottom: 15px;
+}
+
+.section p {
+  font-size: 20px;
+  color: #0A2126;
+  line-height: 1.6;
 }
 
 hr {
@@ -107,40 +144,6 @@ div.desc {
 }
 .imagenes {
   margin-left: 400px;
-}
-
-/* Estilo del footer */
-footer {
-  background-color: #333; /* Color de fondo */
-  color: #fff; /* Color del texto */
-  padding: 20px 0;
-  text-align: center;
-  margin-top: 40px; /* Espacio superior entre el contenido y el footer */
-}
-
-.footer-content {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-.footer-nav {
-  list-style: none;
-  padding: 0;
-}
-
-.footer-nav li {
-  display: inline;
-  margin: 0 10px;
-}
-
-.footer-nav a {
-  color: #fff; /* Color de los enlaces */
-  text-decoration: none;
-}
-
-.footer-nav a:hover {
-  text-decoration: underline;
 }
 
 /* Estilo de las imágenes */
@@ -219,6 +222,7 @@ footer {
 }
 /* Estilos específicos para el formulario dentro del contenedor .form-container */
 .form-container {
+  margin-right: 20px;
   background: #fff;
   padding: 20px;
   border-radius: 8px;
@@ -275,6 +279,7 @@ footer {
   gap: 10px; /* Espacio entre los dos contenedores */
   max-width: 1200px; /* Ancho máximo del contenedor principal */
   margin: 0 auto; /* Centra el contenedor principal */
+  
 }
 
 /* Nuevos estilos para la sección "Nuestros Servicios" */
@@ -327,6 +332,7 @@ footer {
   text-align: center;
   padding: 50px;
   background-color: #D9D4C5;
+  background-image: url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 18c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm48 25c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm-43-7c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm63 31c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM34 90c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm56-76c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM12 86c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm28-65c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm23-11c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-6 60c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm29 22c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zM32 63c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm57-13c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-9-21c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM60 91c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM35 41c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM12 60c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2z' fill='%23a0a68a' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
 .services-section h2 {
@@ -337,7 +343,7 @@ footer {
 
 .services-section p {
   color: #0A2126;
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 40px;
 }
 
@@ -372,4 +378,261 @@ footer {
   font-size: 22px;
   margin-bottom: 10px;
   color: #133840;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  max-width: 900px;
+  width: 100%;
+  margin: 20px;
+}
+
+.content {
+  flex: 1;
+  padding-right: 20px;
+  text-align: left;
+}
+
+.image {
+  flex: 0.4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image img {
+  border-radius: 10px;
+  max-width: 100%;
+  height: auto;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400);
+.footer #button{
+	width:35px;
+	height:35px;
+	border: #A0A68A 12px solid;
+	border-radius:35px;
+	margin:0 auto;
+	position:relative;
+	-webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+}
+.footer #button:hover{
+	width:35px;
+	height:35px;
+	border: #A0A68A 12px solid;
+	-webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+	position:relative;
+}
+.footer {
+	bottom:0;
+	left:0;
+	position:fixed;
+    width: 100%;
+    height: 2em;
+    overflow:hidden;
+    margin:0 auto;
+	-webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+	z-index:999;
+}
+.footer:hover {
+	-webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+	height: 10em;
+}
+.footer #container{
+	margin-top:5px;
+	width:100%;
+  height:100%;
+  position:relative;
+  top:0;
+  left:0;
+	background: #A0A68A;
+}
+.footer #cont{
+  position:relative;
+  top:-45px;
+  right:190px;
+	width:150px;
+	height:auto;
+	margin:0 auto;
+}
+.footer_center{
+	width:500px;
+	float:left;
+  text-align:center;
+}
+.footer h3{
+	font-family: 'Helvetica';
+	font-size: 30px;
+	font-weight: 100;
+	margin-top:70px;
+	margin-left:40px;
+}
+.footer p{
+	font-family: 'Helvetica';
+	font-size: 20px;
+	font-weight: 100;
+	margin-top:70px;
+	margin-left:40px;
+}
+
+.sedes{
+  background-color: #D9D4C5;
+  text-align: center;
+  font-size: 25px;
+  background-image: url("data:image/svg+xml,%3Csvg width='80' height='80' viewBox='0 0 80 80' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23a0a68a' fill-opacity='0.4'%3E%3Cpath d='M50 50c0-5.523 4.477-10 10-10s10 4.477 10 10-4.477 10-10 10c0 5.523-4.477 10-10 10s-10-4.477-10-10 4.477-10 10-10zM10 10c0-5.523 4.477-10 10-10s10 4.477 10 10-4.477 10-10 10c0 5.523-4.477 10-10 10S0 25.523 0 20s4.477-10 10-10zm10 8c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm40 40c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+.accordion {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 40px; /* Espacio entre los elementos */
+  height: 400px;
+  transition: 0.3s;
+}
+
+.accordion li {
+  position: relative;
+  overflow: hidden;
+  flex: 0 0 350px; /* Ancho del acordeón en el estado normal */
+  border-radius: 50px;
+  opacity: 0.75;
+  cursor: pointer;
+  transition: transform 0.3s, opacity 0.3s; /* Agrega transición para el hover */
+}
+
+.accordion li:hover {
+  transform: scale(1.2); /* Escalar el elemento en lugar de cambiar el tamaño flex */
+  z-index: 10;
+  opacity: 1;
+}
+
+.accordion li img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: grayscale(0.5);
+}
+
+.accordion h2 {
+  font-weight: 400;
+  font-size: 30px; /* Tamaño de fuente ajustado */
+  line-height: 55px;
+  border-bottom: 2px solid #fff;
+  margin-bottom: 15px;
+  white-space: nowrap;
+  color: #fff; /* Color del texto en el título del acordeón */
+}
+
+.accordion li .content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  color: #fff; /* Color del texto en el contenido del acordeón */
+  padding: 20px; /* Ajusta el relleno */
+  background: #02022e;
+  background: linear-gradient(
+    0deg,
+    rgb(0 0 0 / 70%) 10%,
+    rgb(255 255 255 / 0%) 100%
+  );
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s, visibility 0.3s; /* Asegura una transición suave */
+}
+
+.accordion li .content span {
+  position: absolute;
+  z-index: 3;
+  left: 50%;
+  bottom: 60px;
+  transform: translate(-50%, 0);
+  visibility: hidden;
+  opacity: 0;
+  color: #fff; /* Color del texto en el span dentro del contenido del acordeón */
+  transition: opacity 0.3s, visibility 0.3s; /* Asegura una transición suave */
+}
+
+.accordion li:hover .content {
+  opacity: 1;
+  visibility: visible;
+}
+
+.accordion li:hover span {
+  transform: translate(-50%, 0);
+  opacity: 1;
+  visibility: visible;
+}
+
+footer {
+  background-color: #D9D4C5;
+}
+
+.botones {
+  margin-left: 10px;
+}
+
+.zapote {
+  background-color: #d9d4c5;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23a0a68a' fill-opacity='0.4'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+.accordion-container {
+  width: 100%;
+}
+
+.accordion-item {
+  margin-bottom: 10px;
+}
+
+.accordion-button {
+  background-color: #133840;
+  color: #ccc;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: background-color 0.4s;
+}
+
+.accordion-button.active, .accordion-button:hover {
+  background-color: #5F735A;
+}
+
+.accordion-panel {
+  font-size: 20px;
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
 }
