--- a/Proyecto/css/landing.css
+++ b/Proyecto/css/landing.css
@@ -159,7 +159,7 @@ div.desc {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: #A0A68A;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -227,7 +227,7 @@ div.desc {
 /* Estilos específicos para el formulario dentro del contenedor .form-container */
 .form-container {
   margin-right: 20px;
-  background: #fff;
+  background: #A0A68A;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -634,6 +634,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   background: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente para mejorar la legibilidad */
   padding: 10px;
   border-radius: 15px; /* Redondeo de esquinas */
+  font-family: 'Dancing Script', cursive;
 }
 
 .caption-container {
@@ -644,6 +645,6 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 .caption-container h3 {
   margin: 0;
-  font-size: 24px; /* Tamaño del encabezado */
+  font-size: 40px; /* Tamaño del encabezado */
   color: #ccc; /* Color del encabezado */
 }
