Springboot+MVC+Crud Mascotas

--- a/Proyecto/demo/src/main/resources/templates/landing.html
+++ b/Proyecto/demo/src/main/resources/templates/landing.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
-<link rel="stylesheet" href="..\css\landing.css">
+<link rel="stylesheet" href="/css/landing.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap" rel="stylesheet"> 
-    <script src="..\js\landing.js"></script>
+    <script src="/js/landing.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -25,7 +25,7 @@
     <div class="navbar-container">
       <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #A0A68A">
         <a class="navbar-brand" href="#">
-          <img src="..\images\Logo.png" width="40" height="30" class="d-inline-block align-top" alt="">
+          <img src="/images/Logo.png" width="40" height="30" class="d-inline-block align-top" alt="">
           PetLand
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +65,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="..\images\carrusel4.jpg" alt="First slide" height="500px">
+            <img class="d-block w-100" src="/images/carrusel4.jpg" alt="First slide" height="500px">
             <div class="carousel-caption">
               <div class="caption-container">
               <h3>Cuidamos a tus mascotas con amor y profesionalismo.</h3>
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="..\images\carrisel3.jpg" alt="Second slide" height="500px">
+            <img class="d-block w-100" src="/images/carrisel3.jpg" alt="Second slide" height="500px">
             <div class="carousel-caption">
               <div class="caption-container">
               <h3>Equipo veterinario experto y apasionado por el bienestar animal.</h3>
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="..\images\carrusel5.jpg" alt="Third slide" height="500px">
+            <img class="d-block w-100" src="/images/carrusel5.jpg" alt="Third slide" height="500px">
             <div class="carousel-caption">
               <div class="caption-container">
               <h3>Servicios veterinarios completos para la salud de tus mascotas. </h3>
@@ -104,7 +104,7 @@
     <section class="zapote">
     <section class="about-us" id="quienes">
       <h1>Quiénes Somos</h1>
-      <img src="..\images\Logo-removebg-preview.png" alt="Logo de la Veterinaria" class="logo">
+      <img src="/images/Logo-removebg-preview.png" alt="Logo de la Veterinaria" class="logo">
       <div class="accordion-container">
         <div class="accordion-item">
           <button class="accordion-button">Nuestra Misión</button>
@@ -156,7 +156,7 @@
           </p>
       </div>
       <div class="image">
-          <img src="..\images\veterinario.jpg" alt="Veterinario con un gato">
+          <img src="/images/veterinario.jpg" alt="Veterinario con un gato">
       </div>
   </div>
     <h2>Servicios</h2>
@@ -206,7 +206,7 @@
     <p>En PetLand, estamos trabajando para desarrollar la red de clínicas veterinarias más grande de Bogotá.</p>
     <ul class="accordion">
       <li>
-        <img src="..\images\Acordion.jpg" />
+        <img src="./images/Acordion.jpg" />
         <div class="content">
           <span>
             <h2>PetLand Norte</h2>
@@ -215,7 +215,7 @@
         </div>
       </li>
       <li>
-        <img src="..\images\Acordion2.jpg" />
+        <img src="/images/Acordion2.jpg" />
         <div class="content">
           <span>
             <h2>PetLand Centro</h2>
@@ -224,7 +224,7 @@
         </div>
       </li>
       <li>
-        <img src="..\images\Acordion3.png" />
+        <img src="/images/Acordion3.png" />
         <div class="content">
           <span>
             <h2>PetLand Sur</h2>
@@ -233,7 +233,7 @@
         </div>
       </li>
       <li>
-        <img src="..\images\Acordion4.png" />
+        <img src="/images/Acordion4.png" />
         <div class="content">
           <span>
             <h2>PetLand Chapinero</h2>
