--- a/Proyecto/demo/src/main/resources/templates/landing.html
+++ b/Proyecto/demo/src/main/resources/templates/landing.html
@@ -4,29 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
-<link rel="stylesheet" href="/css/landing.css">
+    <link rel="stylesheet" href="/css/landing.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap" rel="stylesheet"> 
-    <script src="/js/landing.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap" rel="stylesheet"> 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 </head>
   <body>
     <div class="navbar-container">
       <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #A0A68A">
         <a class="navbar-brand" href="#">
-          <img src="/images/Logo.png" width="40" height="30" class="d-inline-block align-top" alt="">
-          PetLand
+          <img src="/images/Logo.png" width="60" height="50" class="d-inline-block align-top" alt="">
+          <span class="brand-text">PetLand</span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,10 +36,8 @@
             </ul>
           </div>
           <div class="botones">
-          <form class="form-inline">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Iniciar Sesion</button>
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Registrarse</button>
-          </form>
+            <a class="boton" href="/owners/login">Iniciar Sesión</a>
+            <a class="boton" href="/vet/login">Portal Veterinario</a>
           </div>
       </nav>
     </div>
@@ -124,10 +110,10 @@
           <button class="accordion-button">Valores</button>
           <div class="panel">
             <ul>
-              <li>Compasión: Tratamos a cada animal con el máximo cuidado y empatía, entendiendo la importancia de su bienestar.</li>
-              <li>Integridad: Actuamos con honestidad y transparencia en todas nuestras interacciones, manteniendo la confianza de nuestros clientes y compañeros.</li>
-              <li>Profesionalismo: Nos esforzamos por mantener altos estándares profesionales en todos los aspectos de nuestra clínica, desde la atención al cliente hasta la atención médica.</li>
-              <li>Dedicación: Estamos comprometidos con la mejora continua y el aprendizaje constante para ofrecer el mejor cuidado posible a nuestros pacientes.</li>
+              <li class="experiencia">Compasión: Tratamos a cada animal con el máximo cuidado y empatía, entendiendo la importancia de su bienestar.</li>
+              <li class="experiencia">Integridad: Actuamos con honestidad y transparencia en todas nuestras interacciones, manteniendo la confianza de nuestros clientes y compañeros.</li>
+              <li class="experiencia">Profesionalismo: Nos esforzamos por mantener altos estándares profesionales en todos los aspectos de nuestra clínica, desde la atención al cliente hasta la atención médica.</li>
+              <li class="experiencia">Dedicación: Estamos comprometidos con la mejora continua y el aprendizaje constante para ofrecer el mejor cuidado posible a nuestros pacientes.</li>
             </ul>
           </div>
         </div>
@@ -136,10 +122,10 @@
           <button class="accordion-button">¿Por Qué Elegirnos?</button>
           <div class="panel">
             <ul>
-              <li>Experiencia y Expertise: Contamos con un equipo de veterinarios altamente capacitados y con años de experiencia en el cuidado de una amplia variedad de mascotas.</li>
-              <li>Tecnología Avanzada: Utilizamos equipos y tecnología de última generación para proporcionar diagnósticos precisos y tratamientos efectivos.</li>
-              <li>Profesionalismo: Nos esforzamos por garantizar que cada cliente reciba el mejor cuidado posible.</li>
-              <li>Compromiso con la Comunidad: Estamos dedicados a apoyar a nuestra comunidad local a través de eventos educativos y servicios accesibles para todos.</li>
+              <li class="experiencia">Experiencia y Expertise: Contamos con un equipo de veterinarios altamente capacitados y con años de experiencia en el cuidado de una amplia variedad de mascotas.</li>
+              <li class="experiencia">Tecnología Avanzada: Utilizamos equipos y tecnología de última generación para proporcionar diagnósticos precisos y tratamientos efectivos.</li>
+              <li class="experiencia">Profesionalismo: Nos esforzamos por garantizar que cada cliente reciba el mejor cuidado posible.</li>
+              <li class="experiencia">Compromiso con la Comunidad: Estamos dedicados a apoyar a nuestra comunidad local a través de eventos educativos y servicios accesibles para todos.</li>
             </ul>
           </div>
         </div>
@@ -293,18 +279,15 @@
     <br>
     </main>
     <footer>
-      <div class="footer">
-        <div class="row">
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-instagram"></i></a>
-        <a href="#"><i class="fa fa-youtube"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        </div>
-        
-        <div class="row">
-        PetLand Copyright © 2024 PetLand - All rights reserved
-        </div>
-        </div>
-    </footer>
+      <div class="footer-content">
+          <p>&copy; 2024 PetLand. Todos los derechos reservados.</p>
+          <p><a href="">Política de Privacidad</a> | <a href="">Términos de Servicio</a></p>
+      </div>
+      <div class="footer-social">
+          <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+      </div>
+  </footer>
 </body>
 </html>
